--- a/src/configs/config.json
+++ b/src/configs/config.json
@@ -1,5 +1,6 @@
 {
     "platform": "",
     "commercial": false,
-    "preloadMaps": false
-} 
+    "preloadMaps": false,
+    "enableFullscreenButton": false
+}
